[package]
name = "cmd-wrapped"
version = "0.4.1"
edition = "2021"
authors = ["YiNNx <yinnnxt@gmail.com>"]
description = "A CLI tool to view Unix shell history statistics, with support for zsh, bash, fish, and atuin."
license = "MIT"
repository = "https://github.com/YiNNx/cmd-wrapped"
readme = "README.md"
keywords = ["commandline", "shell", "zsh", "fish", "atuin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
regex = "1.5"
lazy_static = "1.4.0"
colored = "2.1.0"
num-traits = "0.2.17"
clap = { version = "4.4.11", features = ["cargo"] }
strum = { version = "0.26.2", features = ["derive"] }
